--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,8 @@
         <li><a href="https://www.twitter.com">Twitter</a></li>
     </ul>
 </section>
+<footer id="rodape">
+    Desenvolvido por Leonardo Porto
+</footer>
 </body>
 </html>
